# My-IoT-Energy-Meter

./: CMakeLists.txt  Circuitwatt B series.json  LICENSE  README.md  circuitor_cirwatt_B.json  fakemeter.json  min_littlefs.csv
Thingsboard/: dashboard.json
components/modbus_parser/: CMakeLists.txt  modbus_parser.cpp
components/modbus_parser/include/: modbus_parser.hpp
components/myPPP/: CMakeLists.txt  myPPP.c
components/myPPP/include/: myPPP.h
components/my_mqtt/: CMakeLists.txt  my_mqtt.c
components/my_mqtt/include/: my_mqtt.h
components/nanomodbus/: nanomodbus.c
components/nanomodbus/include/: nanomodbus.h
flash_data/: index.html  meter_config.json
main/: CMakeLists.txt  Kconfig.projbuild  config_server.cpp  config_server.hpp  idf_component.yml  main.c  main.cpp  modbus_handler.cpp  modbus_handler.hpp
